--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -26,7 +26,7 @@
 	<td class="calendarMonthSelect" colspan="2">[[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
 	<td class="calendarTitle" nowrap colspan="3">[[CalendarName]]<br/>
 	  <font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
-	<td class="calendarYearSelect" colspan="2">[[Views]]&nbsp;&nbsp;&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
+	<td class="calendarYearSelect" colspan="2">[[Views]]&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
 </tr>
 <!-- Header End -->
   
