bad html fixes ical tool moved to all modes images as event links legacy preferences function fixed

--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -114,7 +114,7 @@
 <td style="font-size:85%;">[[Version]]&nbsp;[[About]]</td>
 <td style="text-align:right; vertical-align:top;">[[EventStyleBtn]] [[TemplateButton]] [[ConfigurationButton]]</td>
 </tr>
-<tr><td>[[Load_iCal]]</td></tr>
+<!--<tr><td>[[Load_iCal]]</td></tr>-->
 </table>
 [[TodayData]] <!-- (hidden) form post data containing date/page/name -->
 </form>
