main thing added was monday begin week

--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -32,13 +32,13 @@
   
 <!-- Day Heading Start -->
 <tr>
-	<td class="calendarHeading">[[Sunday]]</td>
-	<td class="calendarHeading">[[Monday]]</td>
-	<td class="calendarHeading">[[Tuesday]]</td>
-	<td class="calendarHeading">[[Wednesday]]</td>
-	<td class="calendarHeading">[[Thursday]]</td>
-	<td class="calendarHeading">[[Friday]]</td>
-	<td class="calendarHeading">[[Saturday]]</td>
+	<td class="calendarHeading">[[day1]]</td>
+	<td class="calendarHeading">[[day2]]</td>
+	<td class="calendarHeading">[[day3]]</td>
+	<td class="calendarHeading">[[day4]]</td>
+	<td class="calendarHeading">[[day5]]</td>
+	<td class="calendarHeading">[[day6]]</td>
+	<td class="calendarHeading">[[day7]]</td>
 </tr>
 <!-- Day Heading End -->
 
