added weekoyear and dayofyear preferences

--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -48,10 +48,11 @@
 	<tr>
 	  <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 	  <td class="alerts">[[Alert]]</td>
+	  <td class="dayweekyear">[[DayWeekYear]]</td>
 	  <td class="calendarAddEvent">[[AddEvent]]</td>
 	</tr>
 	<tr>
-	  <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
+	  <td colspan="4"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td>
 	</tr>
   </table>
 </td>
@@ -63,10 +64,11 @@
 	<tr>
 	  <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 	  <td class="alerts">[[Alert]]</td>
+	  <td class="dayweekyear">[[DayWeekYear]]</td>
 	  <td class="calendarAddEvent">[[AddEvent]]</td>
 	</tr>
 	<tr>
-	  <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td>
+	  <td colspan="4"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td>
 	</tr>
   </table>
 </td>
@@ -78,10 +80,12 @@
 	<tr>
 	  <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 	  <td class="alerts">[[Alert]]</td>
+	  <td class="dayweekyear">[[DayWeekYear]]</td>
 	  <td class="calendarAddEvent">[[AddEvent]]</td>
 	</tr>
 	<tr>
-	  <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
+	  <td colspan="4"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td>
+	</tr>
   </table>
 </td>
 <!-- Selected weekend End -->
@@ -92,10 +96,12 @@
 	<tr>
 	  <td class="calendarDayNumber [[dayCustom]]">[[Day]]</td>
 	  <td class="alerts">[[Alert]]</td>
+	  <td class="dayweekyear">[[DayWeekYear]]</td>
 	  <td class="calendarAddEvent">[[AddEvent]]</td>
 	</tr>
 	<tr>
-	  <td colspan="3"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td></tr>
+	  <td colspan="4"><table cellspacing=1 class="calendarEventList">[[EventList]]</table></td>
+	</tr>
   </table>
 </td>
 <!-- Selected weekday End -->
