--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -18,7 +18,7 @@
 	.calendarAddEvent {text-align: right; white-space:nowrap; font-size:10px; vertical-align:top;}		
 	.monthMode{height:100px; border:1px solid #808080;}
 	.calendarEventList { width:100%; background-color: transparent;}
-	
+
 	
 	.calendarTransparent {
 	  background-color: transparent;
@@ -75,6 +75,8 @@
 	  text-align: center;
 	  font-size: 12px;
 	}
+	
+	.dayweekyear {text-align:left;font-size:10px;font-style:italic;}
 	
 	/* eventlist 'mode' day overrrides */
 	.eventsDay {
