--- a/trunk/templates/default.css
+++ b/trunk/templates/default.css
@@ -1,4 +1,3 @@
-<!-- CSS Start -->
 <style type="text/css">
 	/* the calendar table style */
 	option.lst{}
@@ -8,7 +7,7 @@
 	.calendarWeekday {vertical-align:top; background-color:;}	
 	.calendarWeekend {vertical-align:top; background-color:#EEEEEE;}	
 	.calendarToday {vertical-align:top; background-color: #FFFFDD;}
-	.daymissing { height:100px;border:1px solid #808080;}
+	.daymissing { height:100px;border:1px solid #808080; background-color:#EEEEEE;}
 	.alerts {text-align: left;}		
 	.calendarYearSelect {text-align:right;white-space:nowrap;}
 	.calendarMonthSelect {white-space:nowrap;}
@@ -144,4 +143,3 @@
 /******  Year View Options END  *******/		
 
 </style>
-<!-- CSS End -->
