--- a/trunk/templates/calendar_template.html
+++ b/trunk/templates/calendar_template.html
@@ -23,22 +23,18 @@
 <form name='cal_frm' enctype="multipart/form-data" method="post"> <!-- enctype enables uploads -->
 <table class="calendar">
 <tr>
-	<td class="calendarMonthSelect" colspan="2">[[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
-	<td class="calendarTitle" nowrap colspan="3">[[CalendarName]]<br/>
-	  <font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
-	<td class="calendarYearSelect" colspan="2">[[Views]]&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
+	<td class="calendarMonthSelect" width="33%">[[PreviousMonthButton]]&nbsp;[[MonthSelect]]&nbsp;[[NextMonthButton]]&nbsp;</td>
+	<td class="calendarTitle" nowrap  width="34%">[[CalendarName]]<br/><font size="-1">[[CalendarMonth]], [[CalendarYear]]</font> </td>
+	<td class="calendarYearSelect" width="33%">[[Views]]&nbsp;[[TodayButton]]&nbsp;[[PreviousYearButton]]&nbsp;[[YearSelect]]&nbsp;[[NextYearButton]]&nbsp;</td>
 </tr>
+</table>
+
+<table class="calendar">
 <!-- Header End -->
   
 <!-- Heading Start -->
 <tr>
-	<td class="calendarHeading">[[day1]]</td>
-	<td class="calendarHeading">[[day2]]</td>
-	<td class="calendarHeading">[[day3]]</td>
-	<td class="calendarHeading">[[day4]]</td>
-	<td class="calendarHeading">[[day5]]</td>
-	<td class="calendarHeading">[[day6]]</td>
-	<td class="calendarHeading">[[day7]]</td>
+[[HEADING]]
 </tr>
 <!-- Heading End -->
 	
